// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsSubscriptionsPage should match snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="e1q0zwo9-el-flex-justify-between e2kmzjs-el-flex-container"
      >
        <h1
          class="e1byern-el-title"
        >
          Subscriptions
        </h1>
      </div>
      <div
        class="ebhrnzh-el-loader-container"
      >
        <div
          class="eq1m1jz-el-loader"
        >
          <div
            class="exikdu1-el-loader-moving-bar"
          />
        </div>
      </div>
      <div
        class="ec47sgk-el-mb11 ejadz4k-el-table"
        data-has-call-to-action="true"
        data-has-expandable-action="false"
        data-num-columns-excl-action-col="7"
      >
        <div
          class="e1ijk5il-el-table-headers-row"
        >
          <div
            class="e1mqmoqy-el-span2 e1co3p83-el-table-header"
          >
            Type
          </div>
          <div
            class="e1co3p83-el-table-header"
          >
            Start Date
          </div>
          <div
            class="e1co3p83-el-table-header"
          >
            Renewal Date
          </div>
          <div
            class="e1co3p83-el-table-header"
          >
            Frequency
          </div>
          <div
            class="e1co3p83-el-table-header"
          >
            Cost
          </div>
          <div
            class="e1co3p83-el-table-header"
          >
            Status
          </div>
          <div
            class="e1co3p83-el-table-header"
          >
            Cancel Subscription
          </div>
        </div>
        <div
          class="es3tf1j-el-table-row-container"
        >
          <div
            class="e1qy4g2u-el-table-row"
          >
            <div
              class="e1mqmoqy-el-span2 e1n0yfsy-el-table-cell-has-dark-text e1gfmg2g-el-table-cell"
            >
              <div
                class="e4zpaja-el-table-cell-content"
                data-narrow-label="Type"
              >
                Developer edition license for test@example.com
              </div>
            </div>
            <div
              class="e1n0yfsy-el-table-cell-has-dark-text e1gfmg2g-el-table-cell"
            >
              <span
                class="epibvz0-el-intent-secondary ej9yrfo-el-icon"
              >
                <svg />
              </span>
              <div
                class="e4zpaja-el-table-cell-content"
                data-narrow-label="Start Date"
              >
                16 May 2021
              </div>
            </div>
            <div
              class="e1n0yfsy-el-table-cell-has-dark-text e1gfmg2g-el-table-cell"
            >
              <span
                class="epibvz0-el-intent-secondary ej9yrfo-el-icon"
              >
                <svg />
              </span>
              <div
                class="e4zpaja-el-table-cell-content"
                data-narrow-label="Renewal Date"
              >
                01 Mar 2022
              </div>
            </div>
            <div
              class="e1n0yfsy-el-table-cell-has-dark-text e1gfmg2g-el-table-cell"
            >
              <div
                class="e4zpaja-el-table-cell-content"
                data-narrow-label="Frequency"
              >
                Monthly
              </div>
            </div>
            <div
              class="e1n0yfsy-el-table-cell-has-dark-text e1gfmg2g-el-table-cell"
            >
              <span
                class="epibvz0-el-intent-secondary ej9yrfo-el-icon"
              >
                <svg />
              </span>
              <div
                class="e4zpaja-el-table-cell-content"
                data-narrow-label="Cost"
              >
                £300
              </div>
            </div>
            <div
              class="e1gfmg2g-el-table-cell"
            >
              <div
                class="e4zpaja-el-table-cell-content"
                data-narrow-label="Status"
              >
                <span
                  class="e1vxext9-el-intent-danger e1cp9zgf-el-status-indicator"
                />
                 
                Cancelled
              </div>
            </div>
            <div
              class="ewmoxzc-el-table-cta-cell"
            >
              <div
                class="e1t8i3z1-el-table-cta-icon-container"
              >
                <span
                  class="ebee6r1-el-intent-primary ej9yrfo-el-icon"
                  style="font-size: 1.2rem;"
                >
                  <svg />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="e1nnyshg-el-pagination-wrap"
      >
        <div
          class="ex6bmfc-el-pagination-text"
        >
          <input
            class="e1yynswi-el-pagination-input"
            value="1"
          />
           of 
          10
        </div>
        <button
          class="e1g9l338-el-pagination-button"
          data-testid="back-button"
          type="button"
        >
          <span
            class="ej9yrfo-el-icon"
          >
            <svg />
          </span>
        </button>
        <button
          class="e1g9l338-el-pagination-button"
          data-testid="forward-button"
          type="button"
        >
          <span
            class="e11f9czk-el-pagination-primary ej9yrfo-el-icon"
          >
            <svg />
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="e1q0zwo9-el-flex-justify-between e2kmzjs-el-flex-container"
    >
      <h1
        class="e1byern-el-title"
      >
        Subscriptions
      </h1>
    </div>
    <div
      class="ebhrnzh-el-loader-container"
    >
      <div
        class="eq1m1jz-el-loader"
      >
        <div
          class="exikdu1-el-loader-moving-bar"
        />
      </div>
    </div>
    <div
      class="ec47sgk-el-mb11 ejadz4k-el-table"
      data-has-call-to-action="true"
      data-has-expandable-action="false"
      data-num-columns-excl-action-col="7"
    >
      <div
        class="e1ijk5il-el-table-headers-row"
      >
        <div
          class="e1mqmoqy-el-span2 e1co3p83-el-table-header"
        >
          Type
        </div>
        <div
          class="e1co3p83-el-table-header"
        >
          Start Date
        </div>
        <div
          class="e1co3p83-el-table-header"
        >
          Renewal Date
        </div>
        <div
          class="e1co3p83-el-table-header"
        >
          Frequency
        </div>
        <div
          class="e1co3p83-el-table-header"
        >
          Cost
        </div>
        <div
          class="e1co3p83-el-table-header"
        >
          Status
        </div>
        <div
          class="e1co3p83-el-table-header"
        >
          Cancel Subscription
        </div>
      </div>
      <div
        class="es3tf1j-el-table-row-container"
      >
        <div
          class="e1qy4g2u-el-table-row"
        >
          <div
            class="e1mqmoqy-el-span2 e1n0yfsy-el-table-cell-has-dark-text e1gfmg2g-el-table-cell"
          >
            <div
              class="e4zpaja-el-table-cell-content"
              data-narrow-label="Type"
            >
              Developer edition license for test@example.com
            </div>
          </div>
          <div
            class="e1n0yfsy-el-table-cell-has-dark-text e1gfmg2g-el-table-cell"
          >
            <span
              class="epibvz0-el-intent-secondary ej9yrfo-el-icon"
            >
              <svg />
            </span>
            <div
              class="e4zpaja-el-table-cell-content"
              data-narrow-label="Start Date"
            >
              16 May 2021
            </div>
          </div>
          <div
            class="e1n0yfsy-el-table-cell-has-dark-text e1gfmg2g-el-table-cell"
          >
            <span
              class="epibvz0-el-intent-secondary ej9yrfo-el-icon"
            >
              <svg />
            </span>
            <div
              class="e4zpaja-el-table-cell-content"
              data-narrow-label="Renewal Date"
            >
              01 Mar 2022
            </div>
          </div>
          <div
            class="e1n0yfsy-el-table-cell-has-dark-text e1gfmg2g-el-table-cell"
          >
            <div
              class="e4zpaja-el-table-cell-content"
              data-narrow-label="Frequency"
            >
              Monthly
            </div>
          </div>
          <div
            class="e1n0yfsy-el-table-cell-has-dark-text e1gfmg2g-el-table-cell"
          >
            <span
              class="epibvz0-el-intent-secondary ej9yrfo-el-icon"
            >
              <svg />
            </span>
            <div
              class="e4zpaja-el-table-cell-content"
              data-narrow-label="Cost"
            >
              £300
            </div>
          </div>
          <div
            class="e1gfmg2g-el-table-cell"
          >
            <div
              class="e4zpaja-el-table-cell-content"
              data-narrow-label="Status"
            >
              <span
                class="e1vxext9-el-intent-danger e1cp9zgf-el-status-indicator"
              />
               
              Cancelled
            </div>
          </div>
          <div
            class="ewmoxzc-el-table-cta-cell"
          >
            <div
              class="e1t8i3z1-el-table-cta-icon-container"
            >
              <span
                class="ebee6r1-el-intent-primary ej9yrfo-el-icon"
                style="font-size: 1.2rem;"
              >
                <svg />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="e1nnyshg-el-pagination-wrap"
    >
      <div
        class="ex6bmfc-el-pagination-text"
      >
        <input
          class="e1yynswi-el-pagination-input"
          value="1"
        />
         of 
        10
      </div>
      <button
        class="e1g9l338-el-pagination-button"
        data-testid="back-button"
        type="button"
      >
        <span
          class="ej9yrfo-el-icon"
        >
          <svg />
        </span>
      </button>
      <button
        class="e1g9l338-el-pagination-button"
        data-testid="forward-button"
        type="button"
      >
        <span
          class="e11f9czk-el-pagination-primary ej9yrfo-el-icon"
        >
          <svg />
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`SettingsSubscriptionsPage should match snapshot for mobile view 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div />
    </div>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="e1q0zwo9-el-flex-justify-between e2kmzjs-el-flex-container"
      >
        <h1
          class="e1byern-el-title"
        >
          Subscriptions
        </h1>
        <div
          class="ebqwrow-el-button-group"
        >
          <div
            class="ej73pla-el-button-group-align-right eh76izl-el-button-group-inner"
          >
            <button
              class="e1ymtwpu-el-intent-low e1tqqdf9-el-button"
            >
              Controls
              <div
                class="e1q1vabn-el-button-loader"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="ebhrnzh-el-loader-container"
      >
        <div
          class="eq1m1jz-el-loader"
        >
          <div
            class="exikdu1-el-loader-moving-bar"
          />
        </div>
      </div>
      <div
        class="ec47sgk-el-mb11 ejadz4k-el-table"
        data-has-call-to-action="true"
        data-has-expandable-action="false"
        data-num-columns-excl-action-col="7"
      >
        <div
          class="e1ijk5il-el-table-headers-row"
        >
          <div
            class="e1mqmoqy-el-span2 e1co3p83-el-table-header"
          >
            Type
          </div>
          <div
            class="e1co3p83-el-table-header"
          >
            Start Date
          </div>
          <div
            class="e1co3p83-el-table-header"
          >
            Renewal Date
          </div>
          <div
            class="e1co3p83-el-table-header"
          >
            Frequency
          </div>
          <div
            class="e1co3p83-el-table-header"
          >
            Cost
          </div>
          <div
            class="e1co3p83-el-table-header"
          >
            Status
          </div>
          <div
            class="e1co3p83-el-table-header"
          >
            Cancel Subscription
          </div>
        </div>
        <div
          class="es3tf1j-el-table-row-container"
        >
          <div
            class="e1qy4g2u-el-table-row"
          >
            <div
              class="e1mqmoqy-el-span2 e1n0yfsy-el-table-cell-has-dark-text e1gfmg2g-el-table-cell"
            >
              <div
                class="e4zpaja-el-table-cell-content"
                data-narrow-label="Type"
              >
                Developer edition license for test@example.com
              </div>
            </div>
            <div
              class="e1n0yfsy-el-table-cell-has-dark-text e1gfmg2g-el-table-cell"
            >
              <span
                class="epibvz0-el-intent-secondary ej9yrfo-el-icon"
              >
                <svg />
              </span>
              <div
                class="e4zpaja-el-table-cell-content"
                data-narrow-label="Start Date"
              >
                16 May 2021
              </div>
            </div>
            <div
              class="e1n0yfsy-el-table-cell-has-dark-text e1gfmg2g-el-table-cell"
            >
              <span
                class="epibvz0-el-intent-secondary ej9yrfo-el-icon"
              >
                <svg />
              </span>
              <div
                class="e4zpaja-el-table-cell-content"
                data-narrow-label="Renewal Date"
              >
                01 Mar 2022
              </div>
            </div>
            <div
              class="e1n0yfsy-el-table-cell-has-dark-text e1gfmg2g-el-table-cell"
            >
              <div
                class="e4zpaja-el-table-cell-content"
                data-narrow-label="Frequency"
              >
                Monthly
              </div>
            </div>
            <div
              class="e1n0yfsy-el-table-cell-has-dark-text e1gfmg2g-el-table-cell"
            >
              <span
                class="epibvz0-el-intent-secondary ej9yrfo-el-icon"
              >
                <svg />
              </span>
              <div
                class="e4zpaja-el-table-cell-content"
                data-narrow-label="Cost"
              >
                £300
              </div>
            </div>
            <div
              class="e1gfmg2g-el-table-cell"
            >
              <div
                class="e4zpaja-el-table-cell-content"
                data-narrow-label="Status"
              >
                <span
                  class="e1vxext9-el-intent-danger e1cp9zgf-el-status-indicator"
                />
                 
                Cancelled
              </div>
            </div>
            <div
              class="ewmoxzc-el-table-cta-cell"
            >
              <div
                class="e1t8i3z1-el-table-cta-icon-container"
              >
                <span
                  class="ebee6r1-el-intent-primary ej9yrfo-el-icon"
                  style="font-size: 1.2rem;"
                >
                  <svg />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="e1nnyshg-el-pagination-wrap"
      >
        <div
          class="ex6bmfc-el-pagination-text"
        >
          <input
            class="e1yynswi-el-pagination-input"
            value="1"
          />
           of 
          10
        </div>
        <button
          class="e1g9l338-el-pagination-button"
          data-testid="back-button"
          type="button"
        >
          <span
            class="ej9yrfo-el-icon"
          >
            <svg />
          </span>
        </button>
        <button
          class="e1g9l338-el-pagination-button"
          data-testid="forward-button"
          type="button"
        >
          <span
            class="e11f9czk-el-pagination-primary ej9yrfo-el-icon"
          >
            <svg />
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="e1q0zwo9-el-flex-justify-between e2kmzjs-el-flex-container"
    >
      <h1
        class="e1byern-el-title"
      >
        Subscriptions
      </h1>
      <div
        class="ebqwrow-el-button-group"
      >
        <div
          class="ej73pla-el-button-group-align-right eh76izl-el-button-group-inner"
        >
          <button
            class="e1ymtwpu-el-intent-low e1tqqdf9-el-button"
          >
            Controls
            <div
              class="e1q1vabn-el-button-loader"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="ebhrnzh-el-loader-container"
    >
      <div
        class="eq1m1jz-el-loader"
      >
        <div
          class="exikdu1-el-loader-moving-bar"
        />
      </div>
    </div>
    <div
      class="ec47sgk-el-mb11 ejadz4k-el-table"
      data-has-call-to-action="true"
      data-has-expandable-action="false"
      data-num-columns-excl-action-col="7"
    >
      <div
        class="e1ijk5il-el-table-headers-row"
      >
        <div
          class="e1mqmoqy-el-span2 e1co3p83-el-table-header"
        >
          Type
        </div>
        <div
          class="e1co3p83-el-table-header"
        >
          Start Date
        </div>
        <div
          class="e1co3p83-el-table-header"
        >
          Renewal Date
        </div>
        <div
          class="e1co3p83-el-table-header"
        >
          Frequency
        </div>
        <div
          class="e1co3p83-el-table-header"
        >
          Cost
        </div>
        <div
          class="e1co3p83-el-table-header"
        >
          Status
        </div>
        <div
          class="e1co3p83-el-table-header"
        >
          Cancel Subscription
        </div>
      </div>
      <div
        class="es3tf1j-el-table-row-container"
      >
        <div
          class="e1qy4g2u-el-table-row"
        >
          <div
            class="e1mqmoqy-el-span2 e1n0yfsy-el-table-cell-has-dark-text e1gfmg2g-el-table-cell"
          >
            <div
              class="e4zpaja-el-table-cell-content"
              data-narrow-label="Type"
            >
              Developer edition license for test@example.com
            </div>
          </div>
          <div
            class="e1n0yfsy-el-table-cell-has-dark-text e1gfmg2g-el-table-cell"
          >
            <span
              class="epibvz0-el-intent-secondary ej9yrfo-el-icon"
            >
              <svg />
            </span>
            <div
              class="e4zpaja-el-table-cell-content"
              data-narrow-label="Start Date"
            >
              16 May 2021
            </div>
          </div>
          <div
            class="e1n0yfsy-el-table-cell-has-dark-text e1gfmg2g-el-table-cell"
          >
            <span
              class="epibvz0-el-intent-secondary ej9yrfo-el-icon"
            >
              <svg />
            </span>
            <div
              class="e4zpaja-el-table-cell-content"
              data-narrow-label="Renewal Date"
            >
              01 Mar 2022
            </div>
          </div>
          <div
            class="e1n0yfsy-el-table-cell-has-dark-text e1gfmg2g-el-table-cell"
          >
            <div
              class="e4zpaja-el-table-cell-content"
              data-narrow-label="Frequency"
            >
              Monthly
            </div>
          </div>
          <div
            class="e1n0yfsy-el-table-cell-has-dark-text e1gfmg2g-el-table-cell"
          >
            <span
              class="epibvz0-el-intent-secondary ej9yrfo-el-icon"
            >
              <svg />
            </span>
            <div
              class="e4zpaja-el-table-cell-content"
              data-narrow-label="Cost"
            >
              £300
            </div>
          </div>
          <div
            class="e1gfmg2g-el-table-cell"
          >
            <div
              class="e4zpaja-el-table-cell-content"
              data-narrow-label="Status"
            >
              <span
                class="e1vxext9-el-intent-danger e1cp9zgf-el-status-indicator"
              />
               
              Cancelled
            </div>
          </div>
          <div
            class="ewmoxzc-el-table-cta-cell"
          >
            <div
              class="e1t8i3z1-el-table-cta-icon-container"
            >
              <span
                class="ebee6r1-el-intent-primary ej9yrfo-el-icon"
                style="font-size: 1.2rem;"
              >
                <svg />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="e1nnyshg-el-pagination-wrap"
    >
      <div
        class="ex6bmfc-el-pagination-text"
      >
        <input
          class="e1yynswi-el-pagination-input"
          value="1"
        />
         of 
        10
      </div>
      <button
        class="e1g9l338-el-pagination-button"
        data-testid="back-button"
        type="button"
      >
        <span
          class="ej9yrfo-el-icon"
        >
          <svg />
        </span>
      </button>
      <button
        class="e1g9l338-el-pagination-button"
        data-testid="forward-button"
        type="button"
      >
        <span
          class="e11f9czk-el-pagination-primary ej9yrfo-el-icon"
        >
          <svg />
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
